--- a/themes/dreams/layouts/partials/header.html
+++ b/themes/dreams/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <article class="dream-header">
-  <section class="ui top attached center aligned segment">
-    <div class="ui small circular image">
+  <section class="ui top attached center aligned segment" style="display: flex; justify-content: space-evenly;">
+    <div class="ui small circular image" style="width: 7rem;">
       {{ if isset .Site.Params "avatar" }}
         <img src="{{ .Site.Params.avatar | relURL }}">
       {{ end }}
@@ -9,7 +9,7 @@
     {{ if or (hasPrefix .RelPermalink "/posts") (hasPrefix .RelPermalink "/tags") (hasPrefix .RelPermalink "/categories") }}
     <div class="ui medium header">
     {{ else }}
-    <h1 class="ui medium header">
+    <h1 class="ui medium header" style="margin-left: 0rem;" >
     {{ end }}
       {{ if .Site.Params.headerTitle }}
         {{- .Site.Params.headerTitle -}}
