--- a/themes/dreams/layouts/partials/socials.html
+++ b/themes/dreams/layouts/partials/socials.html
@@ -23,17 +23,15 @@
   </div>
   {{ end }}
 
-  {{ if .Site.Params.youtube }}
+  {{ if .Site.Params.youtube}}
   <div class="item">
-    <a href="https://www.youtube.com/brunvelop" target="_blank">
-      <i class="{{ .IconSize }} youtube icon" title="Codepen"></i>
+    <a href="https://www.youtube.com/{{ .Site.Params.youtube }}" target="_blank">
+      <i class="{{ .IconSize }} youtube icon" title="youtube"></i>
     </a>
   </div>
   {{ end }}
 
-
   {{ if .Site.Params.tiktok }}
-
   <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
       <symbol id="icon-tiktok" viewBox="0 0 512 512">
@@ -50,17 +48,15 @@
       </svg>
     </a>
   </div>
-  
-
   {{ end }}
 
 
   {{ if .Site.Params.twitter }}
-    <div class="item">
-      <a href="https://twitter.com/{{ .Site.Params.twitter }}" target="_blank">
-        <i class="{{ .IconSize }} twitter icon" title="Twitter"></i>
-      </a>
-    </div>
+  <div class="item">
+    <a href="https://twitter.com/{{ .Site.Params.twitter }}" target="_blank">
+      <i class="{{ .IconSize }} twitter icon" title="Twitter"></i>
+    </a>
+  </div>
   {{ end }}
 
   {{ if .Site.Params.instagram }}
@@ -71,6 +67,26 @@
     </div>
   {{ end }}
 
+  {{ if .Site.Params.rarible }}
+
+  <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+      <symbol id="icon-rarible" viewBox="5 3 30 30">
+        <title>rarible</title>
+        <path style="fill: #8fbc8f" d="M27.6007 19.8536C28.8607 19.5262 29.9817 18.5838 29.9817 16.6889C29.9817 13.5342 27.3031 12.8 23.8706 12.8H10.2V27.0064H15.9539V22.185H22.7793C23.8309 22.185 24.446 22.6016 24.446 23.6334V27.0064H30.2V23.4548C30.2 21.5203 29.1087 20.3 27.6007 19.8536ZM22.8785 18.3556H15.9539V16.9667H22.8785C23.6325 16.9667 24.0888 17.0659 24.0888 17.6612C24.0888 18.2564 23.6325 18.3556 22.8785 18.3556Z"/>
+      </symbol>
+    </defs>
+  </svg>
+  
+  <div class="item">
+    <a href="https://rarible.com/brunvelop" target="_blank">
+      <svg class="svg-rarible" style="width: 1.4em; height:1.4em;">
+        <use xlink:href="#icon-rarible"></use>
+      </svg>
+    </a>
+  </div>
+  
+  {{ end }}
 
 
 
