--- a/css/site.css
+++ b/css/site.css
@@ -85,15 +85,17 @@ body .os-host>.os-padding>.os-viewport>.os-content {
 
 .ui.menu.dream-menu.dream-socials {
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+    justify-content: space-evenly
+
 }
 
 .ui.menu.dream-menu.dream-socials .item:first-child {
-    padding-left: 0.5rem
+    padding-left: 0rem
 }
 
 .ui.menu.dream-menu .item {
-    padding: 0.5rem
+    padding: 0.1rem
 }
 
 .ui.menu.dream-menu .item:first-child {
