design: remove extra content

--- a/themes/dreams/layouts/_default/summary.html
+++ b/themes/dreams/layouts/_default/summary.html
@@ -31,9 +31,8 @@
     </div>
   </div>
 
+  {{if .Params.extra}}
   <div class="extra content">
-    <div class="author">
-
-
   </div>
+  {{end}}
 </article>
