feat: social icons aling

--- a/themes/dreams/layouts/partials/socials.html
+++ b/themes/dreams/layouts/partials/socials.html
@@ -1,4 +1,4 @@
-<nav class="ui secondary menu dream-menu dream-socials">
+<nav class="ui secondary menu dream-menu dream-socials" style="display: flex; justify-content: center; flex-wrap: nowrap;">
   {{ if .Site.Params.email }}
     <div class="item">
       <a href="mailto:{{ .Site.Params.email }}">
