--- a/themes/dreams/layouts/_default/baseof.html
+++ b/themes/dreams/layouts/_default/baseof.html
@@ -11,6 +11,16 @@
     {{ range .Site.Params.Advanced.customCSS -}}
       <link rel="stylesheet" href="{{ . | relURL }}" />
     {{- end }}
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HNQHKCQYXF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HNQHKCQYXF');
+    </script>
   </head>
 
   <body class="default">
