feat: aling socials

--- a/themes/dreams/layouts/index.html
+++ b/themes/dreams/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main"}}
-<div class="ui relaxed grid dream-grid">
-  <div class="sixteen wide mobile eight wide tablet eight wide computer four wide large screen four wide widescreen column dream-column">
+<div class="ui relaxed grid dream-grid" style="padding: 0; margin: 0;">
+  <div class="sixteen wide mobile eight wide tablet eight wide computer four wide large screen four wide widescreen column dream-column" style="padding: 0; margin: 0; margin-top: 1rem;">
     {{ partial "header.html" . }}
   </div>
 
