--- a/themes/dreams/layouts/partials/header.html
+++ b/themes/dreams/layouts/partials/header.html
@@ -97,7 +97,7 @@
   </section>
   {{ end }}
 
-  <section class="ui attached segment header-socials">
+  <section class="ui attached segment header-socials" style="padding: 0;">
     {{ partial "socials.html" (dict "Site" .Site "IconSize" "") }}
   </section>
 
