--- a/themes/dreams/layouts/partials/socials.html
+++ b/themes/dreams/layouts/partials/socials.html
@@ -1,4 +1,4 @@
-<nav class="ui secondary menu dream-menu dream-socials" style="display: flex; justify-content: center; flex-wrap: nowrap;">
+<nav class="ui secondary menu dream-menu dream-socials" style="padding: 0; margin: 0; display: flex; justify-content: space-evenly; flex-wrap: wrap;">
   {{ if .Site.Params.email }}
     <div class="item">
       <a href="mailto:{{ .Site.Params.email }}">
@@ -69,7 +69,7 @@
 
   {{ if .Site.Params.rarible }}
 
-  <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg aria-hidden="true" style="width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
       <symbol id="icon-rarible" viewBox="5 3 30 30">
         <title>rarible</title>
